# bigmuc

./: .gitignore  README.md  pyproject.toml
contextos_de_negocio/alimentacao/agregados/: __init__.py  alimento.py
contextos_de_negocio/alimentacao/dominio/: objetos_de_valor.py
contextos_de_negocio/alimentacao/dominio/agregados/: __init__.py  alimento.py  refeicao.py
contextos_de_negocio/alimentacao/dominio/entidades/: __init__.py  alimento.py  refeicao.py
contextos_de_negocio/alimentacao/entidades/: __init__.py  alimento.py
tests/contextos_de_negocio/alimentacao/agregados/: test_alimento_agregado.py
tests/contextos_de_negocio/alimentacao/entidades/: test_alimento_entidade.py
