[tool.poetry]
name = "bigmuc"
version = "0.1.0"
description = ""
authors = ["Vinícius Lins <viniciusaclins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
